--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Recipe Reverse</string>
+    <string name="enter_an_ingredient">Enter an ingredient</string>
 </resources>
